--- a/BlazorSvgEditor.WasmTest/wwwroot/index.html
+++ b/BlazorSvgEditor.WasmTest/wwwroot/index.html
@@ -7,10 +7,9 @@
     <title>BlazorSvgEditor.WasmTest</title>
     
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="BlazorSvgEditor.WasmTest.styles.css" rel="stylesheet" />
+    <link href="css/tailwind.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="logo.png" />
 </head>
 
 <body>
